--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,23 @@
 <resources>
-    <string name="app_name">Rss HReader</string>
+    <string name="app_name">HReader</string>
     <string name="title_search">Search</string>
     <string name="title_history">History</string>
     <string name="title_account">Account</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_read_rss">ReadRssActivity</string>
-    <string name="title_activity_signup">SignUpActivity</string>
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">Email:</string>
+    <string name="prompt_name">Name:</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="message_url">Please enter valid url!</string>
+    <string name="message_title_url">Wrong url</string>
+
+    <string name="sign_in">Sign in</string>
+    <string name="sign_out">Sign out</string>
+    <string name="register">Register</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="email">Email</string>
+    <string name="input_rss">Please enter the url</string>
+    <string name="wrong_info">Invalid information</string>
+    <string name="re_enter">Please re-enter</string>
+
 </resources>
